tests/toylang/neg/001083_mutation.toylang
program a = { if a then sleep then; } .
